<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_song"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_relativelayout_listitem">

    <ImageView
        android:id="@+id/album_song"
        android:layout_width="@dimen/album_icon"
        android:layout_height="@dimen/album_icon"
        android:layout_margin="@dimen/small_margin"
        android:contentDescription="@string/album_icon_description"
        tools:srcCompat="@drawable/ic_grade" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/small_margin"
        android:layout_toEndOf="@id/album_song"
        android:layout_toRightOf="@id/album_song"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/title" />

        <TextView
            android:id="@+id/artist_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/artist" />

    </LinearLayout>
</RelativeLayout>