<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/playing_from"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playlist_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/playlist_name"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/albumID"
        android:layout_width="match_parent"
        android:layout_height="@dimen/album_cover_height"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playlist_from"
        tools:srcCompat="@tools:sample/avatars[0]" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumID" />

    <TextView
        android:id="@+id/artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/artist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ImageView
        android:id="@+id/previous"
        android:layout_width="@dimen/song_icons"
        android:layout_height="@dimen/song_icons"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:contentDescription="TODO"
        android:src="@drawable/ic_skip_previous"
        app:layout_constraintBottom_toBottomOf="@+id/play"
        app:layout_constraintEnd_toStartOf="@+id/play"
        app:layout_constraintHorizontal_bias="0.651"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/play"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/play"
        android:layout_width="@dimen/song_icons"
        android:layout_height="@dimen/song_icons"
        android:layout_marginTop="@dimen/play_margin_top"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:contentDescription="TODO"
        android:src="@drawable/ic_play_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next"
        app:layout_constraintTop_toBottomOf="@+id/artist"
        app:layout_constraintVertical_bias="0.146" />

    <ImageView
        android:id="@+id/next"
        android:layout_width="@dimen/song_icons"
        android:layout_height="@dimen/song_icons"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:contentDescription="TODO"
        android:src="@drawable/ic_skip_next"
        app:layout_constraintBottom_toBottomOf="@+id/play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/play"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>